# liquidity_pools

./: .gitignore  Anchor.toml  Cargo.toml  default_13318050378436237552_0_56705.profraw  default_13318050378436237552_0_57527.profraw  jest.config.js  package.json  simple_test_runner.sh
anchor-test-code-coverage-artifacts/: 53417-13318050378436237552_0.profraw  merged.profdata
anchor-test-code-coverage-artifacts/htmlcov/: index.html  style.css
anchor-test-code-coverage-artifacts/htmlcov/coverage/Users/nikolaycholakov/Desktop/GitHub/liquidity_pools/programs/liquidity_pools/src/: lib.rs.html
anchor-test-code-coverage-artifacts/htmlcov/coverage/Users/nikolaycholakov/Desktop/GitHub/liquidity_pools/programs/liquidity_pools/src/helpers/: fees.rs.html  transfer.rs.html
programs/liquidity_pools/: Cargo.toml
programs/liquidity_pools/src/: error.rs  lib.rs
programs/liquidity_pools/src/helpers/: fees.rs  mod.rs  transfer.rs
programs/liquidity_pools/src/instructions/: add_liquidity.rs  create_pool.rs  initialize.rs  mod.rs  remove_liquidity.rs  swap.rs  update_config.rs
programs/liquidity_pools/src/state/: config.rs  pool.rs
programs/liquidity_pools/tests/: demo.rs
tests/: coverage.ts  errors.ts
tests/instructions/: add_liquiduty.spec.ts  create_pool.spec.ts  helpers.ts  initialize.spec.ts  lp_calculations.spec.ts  remove_liquidity.spec.ts  swap.spec.ts  update_config.spec.ts
tests/utils/: helpers.ts  math.ts  seeds.ts
(+8 files in other folders)
