[package]
name = "liquidity_pools"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidity_pools"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = "0.6.1"
solana-program-runtime = "2.2.4"
solana-program-stubs = "0.1.1"
solana-program-test = "2.3.5"
